feat: Add product_allowed_state.rb to support business rules of allowed products by state, adjust rails helper to clean the db and run the migrations, add factories and specs, remove unnecessary rubocop rules for specs

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,3 +4,7 @@ Style/Documentation:
 Style/FrozenStringLiteralComment:
   Exclude:
     - 'db/migrate/**/*.rb'
+
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
